black main font, increases contrast in every theme, fixes #62

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
 	overflow-x: hidden;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	color: #606060;
+	color: #000000;
 	font-size: 26pt;
 }
 
